Cloudformationtemplate.yaml


AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template for creating an Application Load Balancer and Auto Scaling Group

Parameters:
  KeyName:
    Description: Name of an existing EC2 key pair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP and SSH access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: PUC-launchtemp
      LaunchTemplateData:
        ImageId: ami-007020fd9c84e18c7  
        InstanceType: t2.micro
        KeyName: !Ref KeyName
        SecurityGroupIds: 
          - !GetAtt InstanceSecurityGroup.GroupId  # Reference the security group ID directly
        UserData: !Base64 |
          #!/bin/bash
          sudo apt update -y
          sudo apt install -y openjdk-8-jdk openjdk-17-jre-headless openjdk-17-jdk-headless unzip
          sudo apt install ruby-full -y
          sudo apt install wget
          cd /home/ubuntu
          wget https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.71/bin/apache-tomcat-9.0.71.zip
          wget https://aws-codedeploy-us-east-1.s3.amazonaws.com/latest/install
          chmod +x install
          unzip /home/ubuntu/apache-tomcat-9.0.71.zip -d /home/ubuntu/
          sudo chmod o+w /home/ubuntu/apache-tomcat-9.0.71/webapps/
          sudo ./install auto
        IamInstanceProfile:
          Arn: arn:aws:iam::907047136707:instance-profile/ec2-role

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: PUC-tgtgrp
      TargetType: instance
      Protocol: HTTP
      Port: 8080
      VpcId: vpc-030db2606b88a25d9  

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: PUC-alb
      Scheme: internet-facing
      IpAddressType: ipv4
      Subnets:
        - subnet-099ce14ff4ddfb7b8
        - subnet-0bba346b4604dc7c1
        - subnet-00b5ca2b6c3cb1fd4
      SecurityGroups:
        - sg-0f41096225627f19b
        - !GetAtt InstanceSecurityGroup.GroupId  # Reference the security group ID directly

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref TargetGroup
          Type: forward
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: PUC-asg
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      VPCZoneIdentifier:
        - subnet-099ce14ff4ddfb7b8
        - subnet-0bba346b4604dc7c1
        - subnet-00b5ca2b6c3cb1fd4
      TargetGroupARNs:
        - !Ref TargetGroup
      HealthCheckType: EC2
      HealthCheckGracePeriod: 300
      DesiredCapacity: 2
      MinSize: 1
      MaxSize: 3

Outputs:
  LoadBalancerDNSName:
    Description: DNS name of the load balancer
    Value: !GetAtt LoadBalancer.DNSName
